# image-generation-mcp

./: .copier-answers.yml  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .vale.ini  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TEMPLATE.md  codecov.yml  compose.yml  mkdocs.yml  pyproject.toml  server.json  versions.json
.gemini/: config.yaml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  copier-update.yml  coverage-status.yml  docs.yml  release.yml
1.10/: 404.html  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
1.10/configuration/: index.html  index.md
1.10/configuration-generator/: index.html
1.10/deployment/claude-desktop/: index.html
1.10/deployment/docker/: index.html  index.md
1.10/deployment/oidc/: index.html  index.md
1.10/deployment/systemd/: index.html  index.md
1.10/getting-started/claude-code/: index.html
1.10/getting-started/claude-desktop/: index.html  index.md
1.10/getting-started/installation/: index.html  index.md
1.10/guides/authentication/: index.html  index.md
1.10/guides/client-compatibility/: index.html
1.10/guides/image-assets/: index.html
1.10/guides/prompt-writing/: index.html  index.md
1.10/guides/styles/: index.html  index.md
1.10/javascripts/config-wizard/: generators.js
1.10/prompts/: index.html  index.md
1.10/providers/: index.html  index.md
1.10/providers/gemini/: index.html  index.md
1.10/providers/model-catalog/: index.html
1.10/providers/openai/: index.html
1.10/providers/placeholder/: index.html  index.md
1.10/providers/sd-webui/: index.html  index.md
1.10/resources/: index.html  index.md
1.10/search/: search_index.json
1.10/tools/: index.html  index.md
1.11/: 404.html  index.html  index.md  llms-full.txt  llms.txt  objects.inv  sitemap.xml
1.11/configuration/: index.html  index.md
1.11/configuration-generator/: index.html
1.11/deployment/claude-desktop/: index.html
1.11/deployment/docker/: index.html  index.md
1.11/deployment/oidc/: index.html  index.md
1.11/deployment/systemd/: index.html  index.md
1.11/getting-started/claude-code/: index.html
1.11/getting-started/claude-desktop/: index.html  index.md
1.11/getting-started/installation/: index.html  index.md
1.11/prompts/: index.html  index.md
1.11/providers/: index.html  index.md
1.11/resources/: index.html  index.md
1.11/search/: search_index.json
1.11/tools/: index.html  index.md
docs/: configuration.md  index.md  installation.md  prompts.md  resources.md  tools.md
docs/decisions/: 0001-multi-provider-architecture.md  0002-provider-protocol-and-registry.md  0003-a1111-model-aware-presets.md  0004-keyword-based-provider-selection.md  0005-hybrid-background-tasks.md  0006-image-asset-model.md  0007-provider-capability-model.md  0008-style-library.md  0009-model-style-metadata.md
docs/deployment/: claude-desktop.md  docker.md  oidc.md  systemd.md
docs/design/: 2026-04-29-model-style-metadata-plan.md  2026-04-29-model-style-metadata.md  2026-06-26-reference-image-input-plan.md  2026-06-26-reference-image-input.md  2026-06-27-openai-image-edit-plan.md  2026-06-27-openai-masks-plan.md  2026-06-27-sd-img2img-plan.md  provider-system.md
docs/getting-started/: claude-code.md  claude-desktop.md  installation.md
docs/guides/: authentication.md  client-compatibility.md  file-exchange.md  image-assets.md  image-input.md  prompt-writing.md  styles.md
docs/providers/: a1111.md  gemini.md  index.md  model-catalog.md  openai.md  placeholder.md  sd-webui.md
docs/stylesheets/: config-wizard.css
docs/tools/: index.md
examples/: bearer-auth.env  oidc.env
packaging/: env.example  image-generation-mcp.service  nfpm.yaml  test-install.sh
packaging/mcpb/: build.sh  manifest.json.in  pyproject.toml.in
packaging/scripts/: postinstall.sh  postremove.sh  preinstall.sh  preremove.sh
scripts/: bump_manifests.py  copier_update_aggregator.py  rename.sh  render_model_catalog.py  vendor_sdk.py
scripts/copier_update_prompts/: job_a.md  job_b.md  job_c.md
src/fastmcp_server_template/: _server_tools.py  cli.py  mcp_server.py
src/image_gen_mcp/: _server_deps.py  _server_prompts.py  _server_resources.py  _server_tools.py  cli.py  config.py  mcp_server.py  processing.py  service.py
src/image_generation_mcp/: __init__.py  _base64_image.py  _cli_impl.py  _fetch_image.py  _http_logging.py  _input_images.py  _server_deps.py  _server_prompts.py  _server_resources.py  _server_tools.py  _transfer_sink.py  _vendored_sdk.py  artifacts.py  cli.py  config.py  domain.py  mcp_server.py  processing.py  prompts.py  resources.py  server.py  service.py  styles.py  tools.py
src/mcp_imagegen/: _server_deps.py  _server_resources.py  _server_tools.py  cli.py  config.py  mcp_server.py  service.py
tests/: _helpers.py  conftest.py  test_a1111_discovery.py  test_a1111_provider.py  test_artifacts.py  test_background.py  test_base64_image.py  test_capabilities.py  test_cli.py  test_cli_serve.py  test_config.py  test_config_wizard_domain.py  test_config_wizard_drift.py  test_config_wizard_smoke.py  test_delete_image.py  test_domain.py  test_event_store.py  test_fetch_image.py  test_file_exchange.py  test_gemini_discovery.py  test_gemini_provider.py  test_get_image_tool.py  test_http_logging.py  test_image_assets.py  test_imported_images.py  test_input_images.py  test_mcp_apps_gallery.py  test_mcp_apps_viewer.py  test_mcp_capabilities_surface.py  test_mcp_integration.py  test_mcp_server.py  test_model_styles.py  test_openai_discovery.py  test_openai_provider.py  test_placeholder.py  test_processing.py  test_prompt_guide_resource.py  test_prompts.py  test_render_model_catalog.py  test_resources.py  (+16 more)
unstable/: 404.html  index.html  index.md  llms-full.txt  llms.txt  sitemap.xml
unstable/configuration/: index.html  index.md
unstable/configuration-generator/: index.html
unstable/prompts/: index.html  index.md
unstable/providers/: index.html  index.md
unstable/resources/: index.html  index.md
unstable/search/: search_index.json
unstable/tools/: index.html  index.md
(+78 files in other folders)
