[project]
name = "image-generation-mcp"
version = "1.11.0"
description = "MCP server for AI image generation via OpenAI, Google GenAI, or Stable Diffusion WebUI"
readme = "README.md"
license = "MIT"  # project-owned — keep across copier updates
requires-python = ">=3.11"
authors = [{ name = "Peter van Liesdonk" }]
keywords = ["mcp", "image-generation-mcp", "model-context-protocol", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",  # project-owned — keep across copier updates
]
dependencies = [
    # httpx and uvicorn come transitively via fastmcp (pulled by
    # fastmcp-pvl-core).  Don't re-list them here.
    "fastmcp-pvl-core>=4.3.0,<5",
    "typer>=0.12",

    # PROJECT-DEPS-START — add domain dependencies below; kept across copier update
    "Pillow>=10.0",
    # PROJECT-DEPS-END
]

[project.optional-dependencies]
# PROJECT-EXTRAS-START — add domain-specific optional-dependency groups below; kept across copier update
# fastmcp-pvl-core already pins fastmcp>=3,<4; adding `[tasks]` here
# attaches the task-queue extra on top.
mcp = ["fastmcp[tasks]>=3.0,<4"]
openai = ["openai>=1.0"]
google-genai = ["google-genai>=1.0"]
all = ["fastmcp[tasks]>=3.0,<4", "openai>=1.0", "google-genai>=1.0"]
# Pulls debugpy transitively via fastmcp-pvl-core's [debug] extra.  The
# version range is inherited from the [project] dependency on
# fastmcp-pvl-core above; pip resolves a single, consistent version.
debug = ["fastmcp-pvl-core[debug]"]
# PROJECT-EXTRAS-END

# Tooling lives under PEP 735 [dependency-groups] (not [project.optional-dependencies])
# so it never ships to PyPI consumers and never lands in the security-audit input.
[dependency-groups]
dev = [
    "image-generation-mcp[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "diff-cover>=9.0",
    "ruff>=0.6",
    "mypy>=1.0",
    "pip-audit>=2.7",
    "jsonschema>=4.18",
]
docs = [
    "mike>=2",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=0.28",
    "mkdocs-llmstxt>=0.5",
]

browser = [
    "pytest-playwright>=0.5",
]

[project.scripts]
image-generation-mcp = "image_generation_mcp.cli:main"

[project.urls]
Repository = "https://github.com/pvliesdonk/image-generation-mcp"
Documentation = "https://pvliesdonk.github.io/image-generation-mcp/"
Issues = "https://github.com/pvliesdonk/image-generation-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_generation_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TC", "PTH", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Depends() and CurrentContext() calls in argument defaults are the standard
# FastMCP dependency injection pattern — B008 is a false positive here.
# Context/FastMCP/Service imports must stay runtime (not TYPE_CHECKING) for
# DI resolution — TC001/TC002/TC003.

# Template-managed: the structural diff-gate adds `S` (security) on the diff
# pass, so the shipped structural-gate test would self-block: its asserts trip
# S101, and its bare-name `git` call trips S607 (a partial executable path —
# the `sys.executable -m ...` calls are NOT flagged). S603 (subprocess use) is
# included defensively: inert in current ruff but emitted by some versions.
# Ignoring all three in tests keeps the gate from self-blocking on its own test
# module; all three are safe in test code. No-op for the base whole-repo select
# (which excludes S). If your project needs its own tests/** ignores, EXTEND
# this list in place — do not add a second "tests/**" key (duplicate TOML key).
"tests/**" = ["S101", "S603", "S607"]

# PROJECT-RUFF-IGNORES-START — replace, extend, or override the entries below
# for your project's real source/test paths (split _server_apps.py into
# per-domain modules, rename tests, add per-file overrides as needed); kept
# across copier update.
# PLR0913 (too-many-args) is ignored on the DI/wiring modules below: FastMCP
# inflates their arg counts with `Context` + `Depends()` injections, so the
# structural diff-gate would flag every new tool/resource/prompt and make
# `# noqa: PLR0913` routine. It only bites when enable_structural_gate is on
# (PLR0913 isn't in the base select); domain modules keep the check, and
# C901/PLR0912/PLR0915 still catch a genuinely complex tool here.
"src/image_generation_mcp/server.py" = ["B008", "TC001", "TC002", "PLR0913"]
"src/image_generation_mcp/cli.py" = ["B008", "PLR0913"]
"src/image_generation_mcp/_server_deps.py" = ["B008", "TC002", "TC003", "PLR0913"]
"src/image_generation_mcp/tools.py" = ["B008", "TC001", "TC002", "PLR0913"]
"src/image_generation_mcp/resources.py" = ["B008", "TC001", "TC002", "PLR0913"]
"src/image_generation_mcp/prompts.py" = ["B008", "TC002", "PLR0913"]
# Path is used at runtime in ImageRecord dataclass.
"src/image_generation_mcp/domain.py" = ["TC003"]
"src/image_generation_mcp/providers/*.py" = ["TC002"]
# pytest fixtures need runtime imports; TC003 also broadly suppressed to match
# the template's intent (template targets `tests/conftest.py` + `tests/test_smoke.py`
# explicitly with TC003 — broadening here pre-empts a future copier conflict).
"tests/*.py" = ["TC002", "TC003"]
# PROJECT-RUFF-IGNORES-END

[tool.ruff.lint.isort]
known-first-party = ["image_generation_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# Structural-gate thresholds. These rules are NOT in the whole-repo `select`
# above — they apply only on the diff via the structural gate's
# `--extend-select` (see .pre-commit-config.yaml / ci.yml). Values are ruff
# defaults, surfaced here as editable policy constants.
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra"]
asyncio_mode = "auto"
markers = [
    "browser: end-to-end test that drives a headless browser (requires the 'browser' dependency group + 'playwright install chromium')",
]

[tool.coverage.run]
source = ["src/image_generation_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["fastmcp", "fastmcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google", "google.genai", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

# Tests use FastMCP private surfaces (e.g. ``tool.fn``) and pytest fixtures
# that mypy --strict cannot type without invasive annotation. Loosen the
# strict knobs for the test tree so the ``mypy src/ tests/`` gate from
# template v1.2.0 stays useful (still catches real bugs) without burying us
# in 290 false-positive errors. Tightening this is tracked as follow-up
# work — see the README's Local development section.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_ignores = false  # stale `type: ignore` comments from earlier configs
disable_error_code = [
    "attr-defined",      # fastmcp Tool.fn private surface used by tests
    "union-attr",        # mcp.get_tool() returns Tool | None; tests assert non-None
    "no-untyped-def",    # pytest fixtures intentionally untyped
    "no-untyped-call",   # importlib-loaded helpers (test_render_model_catalog) are untyped
    "type-arg",          # bare list/tuple/dict in test helpers
    "var-annotated",     # local helper vars without annotations
    "misc",              # async-generator return-type quirks
    "arg-type",          # narrow dict[str, X] vs dict[str, object] in helpers
    "assignment",        # tuple-narrowing in fixture rebinding
]

[tool.pyright]
# Point Pyright at the uv-managed venv so editor diagnostics resolve
# imports the same way as our CLI tools (mypy/ruff/pytest run via uv).
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
# src-layout editable installs use a .pth shim that Pyright does not execute;
# point Pyright at src/ directly so IDE import resolution matches runtime.
extraPaths = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "angular"
tag_format = "v{version}"
# Bump the versioned server.json manifest inside the release commit rather
# than in a follow-up commit + force-retag.
build_command = "python scripts/bump_manifests.py"
# PSR stages and commits files listed in `assets` together with pyproject.toml
# and CHANGELOG.md, so the release tag points at a single commit containing
# all version-coupled files.
assets = [
    "server.json",
]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
